--- a/src/templates/partials/small_header.html
+++ b/src/templates/partials/small_header.html
@@ -33,6 +33,9 @@
 					<a href="/simplepage.html">Контакты</a>
 				</nav>
 			</div>
+			<div class="header__bars">
+				<i class="fas fa-bars"></i>
+			</div>
 		</div>
 	</div>
 </div>
