--- a/src/templates/simplepage.html
+++ b/src/templates/simplepage.html
@@ -10,10 +10,16 @@ title: Simple page
 	<section class="content">
 
 		<div class="container">
-			<div class="title">
+			<div class="title-left">
 				<h3>
 					Название страницы
 				</h3>
+			</div>
+
+			<div class="page__body">
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, perferendis dicta commodi omnis veniam impedit at esse quae beatae libero minima porro sunt blanditiis, amet optio dolorem in laudantium. Excepturi!
+			
 			</div>
 		</div>
 
