--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -25,12 +25,34 @@
 				</a>
 			</div>
 			<div class="header__nav">
-				<nav>
-					<a href="/simplepage.html">Главная</a>
-					<a href="/simplepage.html">Кровати</a>
-					<a href="/simplepage.html">Матрасы</a>
-					<a href="/simplepage.html">О нас</a>
-					<a href="/simplepage.html">Контакты</a>
+				<nav class="nav">
+					<ul class="nav__list">
+						<li><a href="#" class="nav__link">Главная</a></li>
+						<li>
+							<a href="#" class="nav__link">Матрасы</a>
+							<ul class="sub-nav__list">
+								<li>
+									<a href="#" class="sub-nav__link">
+										Скрученые матрасы
+									</a>
+								</li>
+								<li>
+									<a href="#" class="sub-nav__link">
+										Матрасы для детей
+									</a>
+								</li>
+								<li>
+									<a href="#" class="sub-nav__link">
+										Пружинные матрасы
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li><a href="#" class="nav__link">Кровати</a></li>
+						<li><a href="#" class="nav__link">Подушки</a></li>
+						<li><a href="#" class="nav__link">Одеяла</a></li>
+						<li><a href="#" class="nav__link">Контакты</a></li>
+					</ul>
 				</nav>
 			</div>
 			<div class="header__bars">
