--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -1,21 +1,21 @@
-.header 
+.header
 	&__callback
 		+sh
 		background-color: $gold
-		.container 
+		.container
 			display: flex
 			justify-content: space-between
 			align-items: center
-			div 
+			div
 				padding: 0.5em 0
 				font-size: 14px
 				color: $light
-				a 
+				a
 					color: $light
 					text-decoration: none
 			.callback__social
 				display: flex
-				a 
+				a
 					margin-right: 1em
 					font-size: 24px
 	&__top
@@ -33,36 +33,70 @@
 			@media(max-width: 640px)
 				.header__bars
 					display: block
-					color: $gold 
+					color: $gold
 					font-size: 2em
 					cursor: pointer
 
 
 			.header__logo
-				a 
+				a
 					display: flex
 					align-items: center
 					color: $gold
 					text-decoration: none
 					text-transform: uppercase
-					span 
+					span
 						margin-left: 0.25em
 						font-weight: 900
 			.header__nav
-				nav 
-					a 
-						margin-left: 1em
-						color: $dark
-						text-decoration: none
-						font-weight: 700
-						font-size: 14px
-						transition: all .17s
-						&:hover
-							color: $gold
-							transition: all .17s
+				nav a
+					text-decoration: none
+					color: $dark
+				nav
+					.nav__list
+						display: flex
+						position: relative
+						li
+							margin-left: 1em
+							position: relative
+							&:hover
+								.sub-nav__list
+									display: block
+					.nav__list .sub-nav__list
+						position: absolute
+						z-index: 999
+						top: 0
+						left: 0
+						padding-top: 2em
+				.sub-nav__list
+					display: flex
+					flex-direction: column
+					display: none
+					width: 230px
+					li
+						display: flex
+						margin: 0
+						padding: 0
+						margin-left: 0 !important
+						background-color: $light
+						a
+							padding: 0.5em
+							width: 100%
+							border-bottom: 1px solid $gold
+							transition: all 0.14s
+							&:hover
+								background-color: $gold
+								color: $light
+
 				@media(max-width: 640px)
-					nav 
+					nav
 						display: none
+
+
+
+
+
+
 	&__hero
 		min-height: 50vh
 		position: relative
@@ -71,29 +105,29 @@
 		+image('../img/hero_bg.jpeg')
 		+cover
 
-		&::before
-			content: ""
-			position: absolute
-			top: 0
-			left: 0
-			right: 0
-			bottom: 0
-			background-color: rgba(#fff, 0.6)
-			z-index: 0 !important
 		.container
 			z-index: 10 !important
 			color: rgba($dark, 0.9)
-			h1, h2 
+			h1, h2
 				font-weight: 500
+				padding: 0
+				margin: 0
+				width: 50%
+				background-color: $light
+				color: $dark
 
-			h1 
+			h1
 				font-weight: 900
+				padding-top: 30px
+				padding-left: 30px
 			h2
 				font-size: 14px
+				padding: 30px 0
+				padding-left: 30px
 			@media(max-width: 640px)
 				h1
 					font-size: 18px
-				h2 
+				h2
 					font-size: 14px
 					color: #000
-					padding-bottom: 1em
+					padding-bottom: 30px
