--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -27,11 +27,27 @@
 
 	<div class="mobile-menu">
 		<nav>
-			<a href="/simplepage.html">Главная</a>
-			<a href="/simplepage.html">Кровати</a>
-			<a href="/simplepage.html">Матрасы</a>
-			<a href="/simplepage.html">О нас</a>
-			<a href="/simplepage.html">Контакты</a>
+			<ul>
+				<li><a href="#">Главная</a></li>
+				<li>
+					<span>Матрасы</span>
+					<ul class="sub-nav__list">
+						<li>
+							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Матрасы для детей</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
+						</li>
+					</ul>
+				</li>
+				<li><a href="#">Кровати</a></li>
+				<li><a href="#">Подушки</a></li>
+				<li><a href="#">Одеяла</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
 		</nav>
 		<div class="mobile-menu__close">
 			<i class="fas fa-times"></i>
