--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -125,6 +125,8 @@
 				padding: 30px 0
 				padding-left: 30px
 			@media(max-width: 640px)
+				h1, h2 
+					width: 100%
 				h1
 					font-size: 18px
 				h2
