--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -23,7 +23,7 @@ title: Simple page
 			</div>
 			<div class="pagination">
 				<ul>
-					<li><a href="#">1</a></li>
+					<li><a class="active" href="#">1</a></li>
 					<li><a href="#">2</a></li>
 					<li><a href="#">3</a></li>
 					<li><a href="#">4</a></li>
