--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -43,10 +43,52 @@
 						</li>
 					</ul>
 				</li>
+				<li>
+					<span>Матрасы</span>
+					<ul class="sub-nav__list">
+						<li>
+							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Матрасы для детей</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
+						</li>
+					</ul>
+				</li>
 				<li><a href="#">Кровати</a></li>
 				<li><a href="#">Подушки</a></li>
 				<li><a href="#">Одеяла</a></li>
 				<li><a href="#">Контакты</a></li>
+				<li>
+					<span>Матрасы</span>
+					<ul class="sub-nav__list">
+						<li>
+							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Матрасы для детей</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<span>Матрасы</span>
+					<ul class="sub-nav__list">
+						<li>
+							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Матрасы для детей</a>
+						</li>
+						<li>
+							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
+						</li>
+					</ul>
+				</li>
 			</ul>
 		</nav>
 		<div class="mobile-menu__close">
