--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -48,7 +48,26 @@
 								</li>
 							</ul>
 						</li>
-						<li><a href="#" class="nav__link">Кровати</a></li>
+						<li>
+							<a href="#" class="nav__link">Матрасы</a>
+							<ul class="sub-nav__list">
+								<li>
+									<a href="#" class="sub-nav__link">
+										Скрученые матрасы
+									</a>
+								</li>
+								<li>
+									<a href="#" class="sub-nav__link">
+										Матрасы для детей
+									</a>
+								</li>
+								<li>
+									<a href="#" class="sub-nav__link">
+										Пружинные матрасы
+									</a>
+								</li>
+							</ul>
+						</li>
 						<li><a href="#" class="nav__link">Подушки</a></li>
 						<li><a href="#" class="nav__link">Одеяла</a></li>
 						<li><a href="#" class="nav__link">Контакты</a></li>
