--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -72,7 +72,7 @@
 					display: flex
 					flex-direction: column
 					display: none
-					width: 230px
+					// width: 230px
 					li
 						display: flex
 						margin: 0
@@ -125,7 +125,7 @@
 				padding: 30px 0
 				padding-left: 30px
 			@media(max-width: 640px)
-				h1, h2 
+				h1, h2
 					width: 100%
 				h1
 					font-size: 18px
