--- a/src/sass/components/_mobile-menu.sass
+++ b/src/sass/components/_mobile-menu.sass
@@ -3,7 +3,7 @@
 	align-items: center
 	justify-content: center
 	width: 100%
-	height: 100vh
+	min-height: 100vh
 	position: fixed
 	z-index: 9999
 	left: 100%
@@ -11,18 +11,19 @@
 	background-color: $gold
 	transition: 0.25s
 	text-transform: uppercase
+	overflow-y: scroll
 	nav
 		ul
 			li
 				margin-bottom: 1em
-				span 
+				span
 					display: block
 					margin-bottom: 1em
-				span, a 
+				span, a
 					color: $light
 					text-decoration: none
-		li 
-			ul 
+		li
+			ul
 				margin-left: 2em
 				margin-bottom: 2em
 	&__close
