fix primary navigation

--- a/src/sass/components/_content.sass
+++ b/src/sass/components/_content.sass
@@ -27,11 +27,13 @@ section.content
 			.product 
 				width: 100%
 				padding: $ss
+				border-radius: 4px
 				+sh
 				&__photo
 					a 
 						img 
 							width: 100%
+							border-radius: 4px
 				&__name
 					font-weight: 700
 					color: $dark
