--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -24,59 +24,24 @@
 					</span>
 				</a>
 			</div>
-			<div class="header__nav">
-				<nav class="nav">
-					<ul class="nav__list">
-						<li><a href="#" class="nav__link">Главная</a></li>
-						<li>
-							<a href="#" class="nav__link">Матрасы</a>
-							<ul class="sub-nav__list">
-								<li>
-									<a href="#" class="sub-nav__link">
-										Скрученые матрасы
-									</a>
-								</li>
-								<li>
-									<a href="#" class="sub-nav__link">
-										Матрасы для детей
-									</a>
-								</li>
-								<li>
-									<a href="#" class="sub-nav__link">
-										Пружинные матрасы
-									</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="#" class="nav__link">Матрасы</a>
-							<ul class="sub-nav__list">
-								<li>
-									<a href="#" class="sub-nav__link">
-										Скрученые матрасы
-									</a>
-								</li>
-								<li>
-									<a href="#" class="sub-nav__link">
-										Матрасы для детей
-									</a>
-								</li>
-								<li>
-									<a href="#" class="sub-nav__link">
-										Пружинные матрасы
-									</a>
-								</li>
-							</ul>
-						</li>
-						<li><a href="#" class="nav__link">Подушки</a></li>
-						<li><a href="#" class="nav__link">Одеяла</a></li>
-						<li><a href="#" class="nav__link">Контакты</a></li>
-					</ul>
-				</nav>
-			</div>
 			<div class="header__bars">
-				<i class="fas fa-bars"></i>
+				<a href="#my-menu">
+					<i class="fas fa-bars"></i>
+				</a>
 			</div>
+			<nav id="my-menu">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about/">About us</a>
+                        <ul>
+                            <li><a href="/about/history/">History</a></li>
+                            <li><a href="/about/team/">The team</a></li>
+                            <li><a href="/about/address/">Our address</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/contact/">Contact</a></li>
+                </ul>
+            </nav>
 		</div>
 	</div>
 	<div class="header__hero">
