--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -5,11 +5,12 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Селена - Кровати и Матрасы</title>
-	<link href="https://fonts.googleapis.com/css?family=Inter:300,400,700,900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tablesaw/3.1.2/tablesaw.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+	<link href="//fonts.googleapis.com/css?family=Inter:300,400,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/tablesaw/3.1.2/tablesaw.min.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/mmenu-light@3.0.3/dist/mmenu-light.css">
 	<link rel="stylesheet" media="all" href="css/app.css" />
 
 </head>
@@ -24,82 +25,8 @@
 	{% include './../partials/footer.html' %}
 
 
-
-	<div class="mobile-menu">
-		<nav>
-			<ul>
-				<li><a href="#">Главная</a></li>
-				<li>
-					<span>Матрасы</span>
-					<ul class="sub-nav__list">
-						<li>
-							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Матрасы для детей</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<span>Матрасы</span>
-					<ul class="sub-nav__list">
-						<li>
-							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Матрасы для детей</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
-						</li>
-					</ul>
-				</li>
-				<li><a href="#">Кровати</a></li>
-				<li><a href="#">Подушки</a></li>
-				<li><a href="#">Одеяла</a></li>
-				<li><a href="#">Контакты</a></li>
-				<li>
-					<span>Матрасы</span>
-					<ul class="sub-nav__list">
-						<li>
-							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Матрасы для детей</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<span>Матрасы</span>
-					<ul class="sub-nav__list">
-						<li>
-							<a href="#" class="sub-nav__link">Скрученые матрасы</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Матрасы для детей</a>
-						</li>
-						<li>
-							<a href="#" class="sub-nav__link">Пружинные матрасы</a>
-						</li>
-					</ul>
-				</li>
-			</ul>
-		</nav>
-		<div class="mobile-menu__close">
-			<i class="fas fa-times"></i>
-		</div>
-	</div>
-
-
-
 	<!-- BEGIN scripts -->
-	<script src="https://kit.fontawesome.com/8551178583.js" crossorigin="anonymous"></script>
+	<script src="//kit.fontawesome.com/8551178583.js" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<!-- END scripts -->
 </body>
