--- a/src/sass/components/_content.sass
+++ b/src/sass/components/_content.sass
@@ -23,6 +23,7 @@ section.content
 			grid-template-columns: repeat(4, 1fr)
 			grid-gap: $ss*2
 			grid-row-gap: $ss*4
+			margin-top: $ss*4
 
 			.product 
 				width: 100%
