Changes to be committed: 	modified:   src/js/app.js 	modified:   src/sass/components/_header.sass 	modified:   src/templates/partials/header.html  Untracked files: 	src/img/hero_bg-2.png

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -52,9 +52,8 @@
 	&__hero
 		min-height: 50vh
 		position: relative
-		display: flex
+		display: flex !important
 		align-items: center
-		+image('../img/hero_bg.jpeg')
 		+cover
 
 		.container
