--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -44,10 +44,18 @@
             </nav>
 		</div>
 	</div>
-	<div class="header__hero">
-		<div class="container">
-			<h1>Селена56 кровати и матрасы.</h1>
-			<h2>Оптимальный вариант для тех, кто выбирает качество по оптимальной цене.</h2>
+	<div class="slider">
+		<div class="header__hero" style="background-image: url('img/hero_bg.jpeg');">
+			<div class="container">
+				<h1>Кровати и матрасы.</h1>
+				<h2>Оптимальный вариант для тех, кто выбирает качество по оптимальной цене.</h2>
+			</div>
+		</div>
+		<div class="header__hero" style="background-image: url('img/hero_bg-2.png');">
+			<div class="container">
+				<h1>Корпусная мебель.</h1>
+				<h2>Оптимальный вариант для тех, кто выбирает качество по оптимальной цене.</h2>
+			</div>
 		</div>
 	</div>
 </div>
